updated .yaml file

--- a/MaskformerJob_clean/maskformer_cp_job.yaml
+++ b/MaskformerJob_clean/maskformer_cp_job.yaml
@@ -18,6 +18,7 @@ spec:
                 - NVIDIA-A6000
                 - NVIDIA-GeForce-RTX-3090
                 - NVIDIA-GeForce-RTX-2080-Ti
+                - NVIDIA-TITAN-RTX
       volumes:
       - name: data
         persistentVolumeClaim:
