--- a/MaskformerJob_Dist_clean/maskformer_job.yaml
+++ b/MaskformerJob_Dist_clean/maskformer_job.yaml
@@ -14,10 +14,10 @@ spec:
                 operator: In
                 values:
                 - NVIDIA-A100-SXM4-80GB
-                - NVIDIA-A10
-                - NVIDIA-A6000
-                - NVIDIA-GeForce-RTX-3090
-                - NVIDIA-GeForce-RTX-2080-Ti
+                # - NVIDIA-A10
+                # - NVIDIA-A6000
+                # - NVIDIA-GeForce-RTX-3090
+                # - NVIDIA-GeForce-RTX-2080-Ti
       volumes:
       - name: data
         persistentVolumeClaim:
@@ -34,12 +34,12 @@ spec:
           limits:
             memory: 64Gi
             cpu: 32
-            nvidia.com/gpu: 8
+            nvidia.com/gpu: 2
             ephemeral-storage: "1000G"
           requests:
             memory: 64Gi
             cpu: 32
-            nvidia.com/gpu: 8
+            nvidia.com/gpu: 2
             ephemeral-storage: "1000G"
         volumeMounts:
         - name: data
