--- a/maskformer_test1.yaml
+++ b/maskformer_test1.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata: 
-    name: parth-pod-gpu-a10-test1
+    name: parth-pod-test1
 spec:
   affinity:
     nodeAffinity:
